[FIX] ImplementationServices and tests